# panini-wow

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CREDITS.md  LICENSE  PLAN.md  README.md  cliff.toml  mise.toml  mise.windows.toml
.github/workflows/: ci.yml  release-validate.yml  release.yml
PaniniClassicWoW/: PaniniClassicWoW.lua  PaniniClassicWoW.toc  PaniniClassicWoW_Minimap.lua  PaniniClassicWoW_Settings.lua
addon/PaniniWoW-Classic/: PaniniWoW-Classic.toc
addon/PaniniWoW-WotLK/: PaniniWoW-WotLK.toc  PaniniWoW.lua  PaniniWoW_Minimap.lua  PaniniWoW_Settings.lua
addon/shared/: PaniniWoW.lua  PaniniWoW_Minimap.lua  PaniniWoW_Settings.lua
cmake/: CompileHLSL.cmake  PaniniGoogleTest.cmake  toolchain-mingw32.cmake  version.h.in
images/: make-composite
include/: cvar_core.h  log.h  panini.h  panini_math.h  trampoline_pool.h  wow_offsets.h
probe/: CMakeLists.txt  CMakePresets.json
probe/src/: probe.cpp
shaders/: cas.hlsl  debug.hlsl  fxaa.hlsl  panini.hlsl  panini_common.hlsli  tint.hlsl  uv_vis.hlsl
src/: config.cpp  cvar.cpp  cvar_hooks.cpp  dllmain.cpp  hooks.cpp  log.cpp  panini.cpp  state.cpp  trampoline_pool.cpp  version_ops.cpp
tasks/: build.ps1  build.sh  configure.ps1  configure.sh  install.ps1  install.sh  shader.ps1  shader.sh
tests/: CMakeLists.txt
tests/unit/: CVarTableTest.cc  ConfigValidationTest.cc  InvariantTest.cc  PaniniMathTest.cc  PaniniProjectionTest.cc  PrecisionTest.cc  RuntimeRobustnessTest.cc  ShaderPipelineTest.cc  SliderStepTest.cc
tools/fxc2/: fxc2.cpp
